# MPLX

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  INTERVIEW_GUIDE.md  Mplx.sln  README.md  bench.json  bootstrap-mplx.ps1  build-simple-dll.ps1  demo.md  extend-mplx.ps1  help.txt  ion ready for interview showcase  run.txt  step2-apply.ps1  step3-apply.ps1  test_hello.bat  test_jit.bat  test_jit2.bat  vcpkg.json
Application/Jit/: CMakeLists.txt  jit_compiler.cpp  jit_compiler.hpp  jit_runtime.cpp  jit_runtime.hpp  platform.hpp  platform_posix.cpp  platform_win.cpp  x64_emitter.hpp
Application/Mplx.VM/: Class1.cs
Application/mplx-compiler/: CMakeLists.txt  bytecode.hpp  compiler.cpp  compiler.hpp
Application/mplx-vm/: CMakeLists.txt  vm.cpp  vm.hpp
Domain/Mplx.Language/: Class1.cs
Domain/mplx-lang/: CMakeLists.txt  ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.hpp
Infrastructure/Mplx.DotNet/: MplxRuntime.cs
Infrastructure/Mplx.Net/: Class1.cs
Infrastructure/Mplx.Orm/: Class1.cs
Infrastructure/mplx-capi/: CMakeLists.txt  capi.cpp  capi.hpp
Infrastructure/mplx-net/: CMakeLists.txt  net.cpp  net.hpp
Infrastructure/mplx-orm/: CMakeLists.txt  db.hpp
Infrastructure/mplx-pkg/: CMakeLists.txt  main.cpp
Presentation/Mplx.DotNet.Sample/: Mplx.DotNet.Sample.csproj  Program.cs
Presentation/Mplx.Lsp/: package-lock.json  package.json  tsconfig.json
Presentation/Mplx.Lsp/src/: server.ts  shims.d.ts
Presentation/benchmarks-cpp/: CMakeLists.txt  bench_vm.cpp
Presentation/examples/: advanced.mplx  errors.mplx  fib.mplx  fib_20.mplx  fibonacci.mplx  hello.mplx  loop.mplx  simple.mplx  simple_sum.mplx  sum.mplx  sum_1_to_n.mplx
Presentation/tests-cpp/: CMakeLists.txt  lexer_tests.cpp  optimizer_fold.cpp  orm_crud.cpp  orm_smoke.cpp  orm_tx.cpp  parser_errors.cpp  parser_smoke.cpp
Presentation/tools/mplx/: CMakeLists.txt  main.cpp
Presentation/tools/mplx-net/: CMakeLists.txt  main.cpp
Presentation/tools/mplx-netclient/: CMakeLists.txt  main.cpp
Presentation/vscode-mplx/: package-lock.json  package.json
architecture/: CMakeLists.txt  README.md
benchmarks-cpp/: CMakeLists.txt  bench_vm.cpp
examples/: branches.mplx  fib_20.mplx  sum_1_to_n.mplx
layers/: CMakeLists.txt
scripts/: .gitignore  README.md  add-dotnet-wrapper.ps1  build-msvc-dll.ps1  demo-checklist.md  demo.ps1
src-cpp/mplx-capi/: capi.cpp  capi.hpp
src-cpp/mplx-compiler/: CMakeLists.txt  bytecode.hpp  compiler.cpp
src-cpp/mplx-lang/: lexer.hpp  parser.cpp
src-cpp/mplx-net/: CMakeLists.txt
src-cpp/mplx-orm/: db.hpp
src-cpp/tools/mplx/: CMakeLists.txt  main.cpp
src-cpp/tools/mplx-net/: CMakeLists.txt  main.cpp
src-cpp/tools/mplx-netclient/: CMakeLists.txt  main.cpp
src/Mplx.Compiler/: Class1.cs
src/Mplx.DotNet.Sample/: Mplx.DotNet.Sample.csproj  Program.cs
src/Mplx.Lsp/: package.json
src/Mplx.Lsp/src/: server.ts
src/Mplx.StdLib/: Class1.cs
src/vscode-mplx/: language-configuration.json
src/vscode-mplx/src/: extension.ts
tests-cpp/: CMakeLists.txt  orm_crud.cpp
